syntax = "proto3";

message News {
    string id=1;
    string title=2;
    string body =3;
    string postImage= 4;
}

message Empty {}

message NewId {
    string id=1;
}

message NewsList {
    repeated News news =1;
}


service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc GetNews (NewId) returns (News) {}
    rpc DeleteNews (NewId) returns (Empty) {}
    rpc EditNews (News) returns (News) {}
    rpc AddNews (News) returns (News) {}
}